  - zip: renamed plugin to "zzip"
* input:
  - lastfm: obsolete plugin removed
* tags:
  - added tags "ArtistSort", "AlbumArtistSort"
  - id3: revised "performer" tag support
* decoders:
  - don't try a plugin twice (MIME type & suffix)
  - don't fall back to "mad" unless no plugin matches
  - ffmpeg: support multiple tags
  - ffmpeg: convert metadata to generic format
  - sndfile: new decoder plugin based on libsndfile
  - flac: moved CUE sheet support to a playlist plugin
  - flac: support streams without STREAMINFO block
  - mikmod: sample rate is configurable
  - mpg123: new decoder plugin based on libmpg123
  - sidplay: support sub-tunes
  - sidplay: implemented songlength database
  - sidplay: support seeking
  - wavpack: activate 32 bit support
  - wavpack: allow more than 2 channels
* encoders:
  - twolame: new encoder plugin based on libtwolame
  - flac: new encoder plugin based on libFLAC
  - wave: new encoder plugin for PCM WAV format
* output:
  - recorder: new output plugin for recording radio streams
  - alsa: don't recover on CANCEL
  - alsa: fill period buffer with silence before draining
  - openal: new output plugin
  - pulse: announce "media.role=music"
  - pulse: renamed context to "Music Player Daemon"
  - pulse: connect to server on MPD startup, implement pause
  - jack: require libjack 0.100
  - jack: don't disconnect during pause
  - jack: connect to server on MPD startup
  - jack: added options "client_name", "server_name"
  - jack: clear ring buffers before activating
  - jack: renamed option "ports" to "destination_ports"
  - jack: support more than two audio channels
  - httpd: bind port when output is enabled
  - wildcards allowed in audio_format configuration
  - consistently lock audio output objects
* player:
  - drain audio outputs at the end of the playlist
* mixers:
  - removed support for legacy mixer configuration
  - reimplemented software volume as mixer+filter plugin
  - per-device software/hardware mixer setting
* commands: